--- a/src/static/App.css
+++ b/src/static/App.css
@@ -1,9 +1,20 @@
 @import url('https://fonts.googleapis.com/css?family=Maven+Pro|Kalam&display=swap');
 
-html, body {
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   overflow-y: auto;
-  margin: 0px;
 }
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
 
 .App, .About {
   text-align: center;
@@ -80,4 +91,22 @@ button:hover {
 .dropdown-toggle,
 .dropdown-menu {
   width: 100%;
+}
+
+.trash-icon {
+  float: right;
+}
+
+.trash-icon:hover {
+  color: #a62121;
+  cursor: pointer;
+}
+
+.spec-box {
+  transition: 0.5s;
+}
+
+.spec-box:hover {
+  cursor: pointer;
+  transform: scale(1.02);
 }
