--- a/src/static/App.css
+++ b/src/static/App.css
@@ -42,10 +42,9 @@ textarea:focus, input:focus{
     outline: none;
 }
 
-input[type=text] {
+input[type=text], input {
   position: relative;
-  left: 5px;
-  color: #999999;
+  color: white !important;
 }
 
 button, .submitButton {
@@ -113,13 +112,13 @@ button:hover {
 
 .react-tabs__tab {
   padding: 10px 30px !important;
-  color: #222 !important;
+  color: white !important;
 }
 
 .react-tabs__tab--selected {
   border: 0px !important;
   border-bottom: solid 5px #62CEE6 !important;
-  color: #222 !important;
+  color: white !important;
   background-color: rgba(0,0,0,0.0) !important;
 }
 
