--- a/src/static/App.css
+++ b/src/static/App.css
@@ -1,24 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Maven+Pro|Kalam&display=swap');
 
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  overflow-y: auto;
+div {
+  font-family: 'Maven Pro' !important;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
 
 .App, .About {
   text-align: center;
-  font-family: 'Maven Pro', sans-serif;
   overflow-x: hidden;
   overflow-y: hidden;
   width: 100%;
@@ -111,13 +98,13 @@ button:hover {
 
 .react-tabs__tab {
   padding: 10px 30px !important;
-  color: white !important;
+  color: #333333 !important;
 }
 
 .react-tabs__tab--selected {
   border: 0px !important;
   border-bottom: solid 5px #62CEE6 !important;
-  color: white !important;
+  color: #333333 !important;
   background-color: rgba(0,0,0,0.0) !important;
 }
 
