--- a/src/static/App.css
+++ b/src/static/App.css
@@ -145,3 +145,7 @@ button:hover {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+
+.Container {
+  max-width: 1200px !important;
+}
