better auth and dashboard

--- a/src/static/App.css
+++ b/src/static/App.css
@@ -271,3 +271,7 @@ input[type=text], input {
   -ms-transform: rotate(45deg);
   transform: rotate(45deg);
 }
+
+.typeform-up:hover {
+  cursor: pointer;
+}
