email messaging tool

--- a/src/static/App.css
+++ b/src/static/App.css
@@ -33,6 +33,16 @@ div {
   font-size: 14px;
 }
 
+.referral-code ::placeholder {
+  color: #777777;
+  font-size: 14px;
+}
+
+.referral-code ::-webkit-scrollbar {
+  width: 0px;
+}
+
+
 textarea:focus, input:focus{
     outline: none;
 }
@@ -287,4 +297,8 @@ input[type=text], input {
 
 .eye-button:hover {
   cursor: pointer;
+}
+
+.pointerOnHover:hover {
+  cursor:pointer;
 }
