--- a/src/static/App.css
+++ b/src/static/App.css
@@ -111,13 +111,13 @@ input[type=text], input {
 
 .react-tabs__tab {
   padding: 10px 30px !important;
-  color: #333333 !important;
+  color: #111111 !important;
 }
 
 .react-tabs__tab--selected {
   border: 0px !important;
-  border-bottom: solid 5px #62CEE6 !important;
-  color: #333333 !important;
+  border-bottom: solid 3px #111111 !important;
+  color: #111111 !important;
   background-color: rgba(0,0,0,0.0) !important;
 }
 
@@ -313,4 +313,36 @@ input[type=text], input {
 .expandOnHover:hover {
   cursor:pointer;
   transform: scale(1.02);
+}
+
+.search ::placeholder {
+  color: #999999;
+}
+
+.options {
+  display: block;
+  list-style: none;
+  width: 400px;
+  transition: width 0.3s;
+  position: relative;
+}
+
+.options div {
+  display: block;
+  background: white;
+  font-size: 14px;
+  width: 100%;
+  padding-left: 20px;
+  margin: 0px;
+  border-radius: 2px;
+}
+div .options div:hover {
+  font-weight: bold;
+  color: #5ec3eb;
+  cursor: pointer;
+  transition: 0.3s all;
+}
+
+.no-options {
+  color: white;
 }
