--- a/src/static/App.css
+++ b/src/static/App.css
@@ -114,7 +114,7 @@ input {
 }
 
 .react-tabs__tab {
-    padding: 10px 30px !important;
+    padding: 15px 30px !important;
     color: #0b172b !important;
 }
 
@@ -122,7 +122,7 @@ input {
     border: 0px !important;
     outline: none !important;
     box-shadow: none !important;
-    border-bottom: solid 0.5px #0b172b !important;
+    border-bottom: solid 1px #0b172b !important;
     color: #0b172b !important;
     background-color: rgba(0, 0, 0, 0) !important;
 }
@@ -369,4 +369,8 @@ div .options div:hover {
 .carousel-indicators .active {
     background-color: #0b172b !important;
     opacity: 1 !important;
+}
+
+.signupBox ::placeholder {
+    color: #999999;
 }
