--- a/src/static/PageDashboard.css
+++ b/src/static/PageDashboard.css
@@ -1,6 +1,134 @@
-.dashboard {
+.dashboard-container {
+	background-color: #F6F6F6;
+	min-height: 100vh;
+	overflow-x: hidden !important;
+	justify-content: center;
+}
+
+.dashboard-flex {
     display: flex;
     overflow-x: hidden;
     position: relative;
     bottom: 60px;
+}
+
+.credits-box {
+    width: 100%;
+    padding: 15px 25px;
+    background: rgba(195, 245, 179, 0.2);
+    color: #2f960e;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    font-size: 14px;
+}
+
+.right-section {
+	padding: 40px 25px 0px 50px;
+	width: calc(100% - 400px);
+}
+
+.right-section .date {
+    display: block;
+    float: none;
+}
+
+.right-section .title {
+	font-size: 42px;
+	font-weight: bold;
+}
+
+@media only screen and (max-width: 700px) {
+	.right-section {
+		padding-left: 40px;
+		padding-right: 40px;
+		width: 100%;	
+	}
+
+	.right-section .date {
+		margin-top: 50px;
+	}
+
+	.right-section .title {
+		font-size: 35px;
+	}
+}
+
+.disk-status-box {
+    background: rgba(195, 245, 179, 0.2);
+    font-size: 14px;
+    width: 100%;
+    margin: auto;
+    margin-bottom: 20px;
+    color: #2f960e;
+    padding: 13px 28px;
+    border-radius: 10px;
+}
+
+.image-box {
+    border-radius: 10px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    text-align: center;
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), rgba(255,255,255,0.9)), url("../assets/mountain.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    padding: 30px 50px;
+    min-height: 260px;
+    margin: auto;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.image-box .icon {
+	color: #333333;
+	margin-top: 25;
+	height: 25;
+}
+
+.image-box .text {
+    color: #333333;
+    font-size: 24px;
+    margin-top: 20px;
+    font-weight: bold;
+}
+
+.image-box .subtext {
+    font-size: 14px;
+    max-width: 500px;
+    margin: auto;
+    margin-top: 15px;
+    color: #111111;
+}
+
+.payment-box {
+    background: #0B172B;
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    padding: 30px 50px;
+    min-height: 260px;
+    margin: auto;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.payment-box .icon {
+	color: white;
+	margin-top: 15;
+	height: 25;
+}
+
+.payment-box .text {
+	color: white;
+	font-size: 22px;
+	margin-top: 20px;
+	font-weight: bold;
+}
+
+.payment-box .subtext {
+	font-size: 14px;
+	max-width: 400px;
+	margin: auto;
+	margin-top: 15px;
+	color: #D6D6D6;
 }
