--- a/src/static/PageDashboard.css
+++ b/src/static/PageDashboard.css
@@ -132,3 +132,21 @@
 	margin-top: 15px;
 	color: #D6D6D6;
 }
+
+.hardware-box {
+    border-radius: 5px;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    text-align: left;
+    background: white;
+    padding: 30px;
+    min-height: 160px;
+    margin: auto;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+.hardware-box .title {
+    text-align: left;
+    margin-top: 5px;
+    height: 45px;
+}
