dashboard reorganized, warnings removed

--- a/src/static/Footer.css
+++ b/src/static/Footer.css
@@ -3,7 +3,7 @@
     background-color: white;
     padding-top: 60px;
     font-size: 14px;
-    margin: "auto";
+    margin: auto;
     max-width: 1920px;
 }
 
