--- a/src/static/PageDashboard.css
+++ b/src/static/PageDashboard.css
@@ -150,3 +150,143 @@
     margin-top: 5px;
     height: 45px;
 }
+
+.payment-box {
+    border-radius: 5px;
+    text-align: center;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    padding: 30px 50px;
+    height: 250px;
+    margin: auto;
+    width: 100%;
+    margin-bottom: 20px;
+    background: #0B172B;
+}
+
+.payment-box .title {
+    color: white;
+    font-size: 24px;
+    margin-top: 20px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.payment-box .icon {
+    color: white;
+    font-size: 22px;
+    margin-top: 15px;
+}
+
+.payment-box .text {
+    font-size: 15px;    
+    max-width: 400px;
+    margin: auto;
+    margin-top: 15px;
+    color: #D6D6D6;
+    font-weight: normal;
+}
+
+@media only screen and (max-width: 700px) {
+    .payment-box .title {
+        font-size: 20px;
+    }
+
+    .payment-box .text {
+        font-size: 13px;
+    }
+}
+
+.download-box {
+    font-size: 14px;
+    background: #0B172B;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 7px;
+    padding: 40px 15px;
+    margin-top: 35px;
+    min-height: 245px;
+}
+
+.download-button {
+    background: rgba(94, 195, 235, 0.1) !important;
+    border: solid 0.5px rgb(94, 195, 235) !important;
+    font-size: 12px !important;
+    border-radius: 2px !important;
+    color: rgb(94, 195, 235) !important;
+    font-weight: bold !important;
+    width: 90px !important;
+    padding: 5px 5px !important;
+}
+
+.download-box .icon {   
+    font-size: 16px;
+    position: relative;
+    bottom: 1px;
+    padding-right: 5px;
+    color: white;
+}
+
+.cancel-button {
+    outline: none;
+    font-size: 12px;
+    border-radius: 2px;
+    float: right;
+    display: inline;
+    padding: 6px 12px;
+    border: none;
+    color: #e34d4d;
+    background-color: rgba(227, 77, 77, 0.05);
+    font-weight: bold;
+}
+
+.cancel-confirm-button {
+    font-weight: bold;
+    margin-top: 30px;
+    outline: none;
+    width: 100%;
+    font-size: 12px;
+    border-radius: 3px;
+    float: right;
+    display: inline;
+    padding: 10px;
+    border: none;
+    color: #E34D4D;
+    background-color: rgba(227, 77, 77, 0.05);
+}
+
+.info-box {
+    display: block;
+    font-size: 14px;
+    background: white;
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 7px;
+    margin-top: 40px;
+    padding: 40px 15px;
+    min-height: 200px;
+}
+
+.info-box .icon {
+    position: relative;
+    font-size: 12px;
+    bottom: 1px;
+    padding-right: 5px;
+    color: #DDDDDD;
+}
+
+.gray-line {
+    float: right;
+    display: inline;
+    margin-left: 0px;
+    background: #EBEBEB;
+    width: 100px;
+    height: 6px;
+    border-radius: 3px;
+    position: relative;
+    top: 8px;
+}
+
+@media only screen and (max-width: 700px) {
+    .gray-line {
+        float: none;
+        display: block;
+    }
+}
