--- a/src/static/PageDashboard.css
+++ b/src/static/PageDashboard.css
@@ -68,11 +68,10 @@
     border-radius: 10px;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     text-align: center;
-    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.9), rgba(255,255,255,0.9)), url("../assets/mountain.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    padding: 30px 50px;
+    padding: 50px;
     min-height: 260px;
     margin: auto;
     width: 100%;
@@ -87,18 +86,29 @@
 
 .image-box .text {
     color: #333333;
-    font-size: 24px;
+    font-size: 26px;
     margin-top: 20px;
     font-weight: bold;
 }
 
 .image-box .subtext {
-    font-size: 14px;
+    font-size: 16px;
     max-width: 500px;
     margin: auto;
     margin-top: 15px;
     color: #111111;
 }
+
+@media only screen and (max-width: 700px) {
+    .image-box .subtext {
+        font-size: 24px;
+    }
+
+    .image-box .subtext {
+        font-size: 14px;
+    }
+}
+
 
 .payment-box {
     background: #0B172B;
