--- a/src/static/PageDashboard.css
+++ b/src/static/PageDashboard.css
@@ -212,7 +212,7 @@
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
     padding: 40px 15px;
-    margin-top: 35px;
+    margin-top: 40px;
     min-height: 245px;
 }
 
@@ -271,7 +271,7 @@
     border-radius: 7px;
     margin-top: 40px;
     padding: 40px 15px;
-    min-height: 200px;
+    min-height: 245px;
 }
 
 .info-box .icon {
@@ -299,4 +299,11 @@
         float: none;
         display: block;
     }
+}
+
+.bottom-title {
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 20px;
+    display: inline;
 }
