--- a/src/static/PagePurchase.css
+++ b/src/static/PagePurchase.css
@@ -1,6 +1,5 @@
 .purchase {
     min-height: 100vh;
-    padding-bottom: 50px;
     background: #F6F6F6;
 }
 
@@ -12,7 +11,7 @@
 }
 
 .right-section-wrapper {
-    padding-top: 100px;
+    padding-top: 50px;
     padding-left: 15px;
     width: calc(100% - 400px);
     overflow-x: hidden !important;
@@ -49,4 +48,33 @@
         width: 0px;
         padding-left: 40px;
     }
+}
+
+.apps-select ::-webkit-scrollbar {
+    width: 0px;
+}
+
+/* Track */
+.apps-select ::-webkit-scrollbar-track {
+    background: none;
+}
+
+.apps-select ::-webkit-scrollbar-thumb {
+    background: rgba(94, 195, 235, 0.2);
+}
+
+.apps-select nav > .nav-item {
+    color: #333333 !important;
+    padding-left: 25px;
+    padding-right: 25px;
+    background-color: rgba(94, 195, 235, 0.05) !important;
+    margin-right: 15px !important;
+    margin-bottom: 15px !important
+}
+
+.apps-select nav .active {
+    font-weight: bold !important;
+    box-shadow: 0px 4px 5px rgba(0,0,0,0.05);
+    background-color: rgba(94, 195, 235, 0.2) !important;
+    color: #1ba8e0 !important;
 }
