--- a/src/static/PageDashboard.css
+++ b/src/static/PageDashboard.css
@@ -112,11 +112,11 @@
 
 .payment-box {
     background: #0B172B;
-    border-radius: 5px;
+    border-radius: 10px;
     text-align: center;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     padding: 30px 50px;
-    min-height: 260px;
+    min-height: 270px;
     margin: auto;
     width: 100%;
     margin-bottom: 20px;
@@ -136,11 +136,12 @@
 }
 
 .payment-box .subtext {
-	font-size: 14px;
+	font-size: 15px;
 	max-width: 400px;
 	margin: auto;
 	margin-top: 15px;
-	color: #D6D6D6;
+    color: #D6D6D6;
+    line-height: 1.6;
 }
 
 .hardware-box {
@@ -236,13 +237,13 @@
 }
 
 .cancel-button {
-    outline: none;
+    outline: none !important;
     font-size: 12px;
     border-radius: 2px;
     float: right;
     display: inline;
     padding: 6px 12px;
-    border: none;
+    border: none !important;
     color: #e34d4d;
     background-color: rgba(227, 77, 77, 0.05);
     font-weight: bold;
@@ -261,6 +262,7 @@
     border: none;
     color: #E34D4D;
     background-color: rgba(227, 77, 77, 0.05);
+    outline: none !important;
 }
 
 .info-box {
