Linted with prettier

--- a/src/static/Footer.css
+++ b/src/static/Footer.css
@@ -24,38 +24,38 @@
 }
 
 .page-link {
-	color: #555555 !important;
-	border: none !important;
-	text-decoration: none !important;
-	margin-bottom: 0px !important;
-	padding-left: 0px !important;
-	font-size: 14px !important;
-	padding-bottom: 0px !important;
+    color: #555555 !important;
+    border: none !important;
+    text-decoration: none !important;
+    margin-bottom: 0px !important;
+    padding-left: 0px !important;
+    font-size: 14px !important;
+    padding-bottom: 0px !important;
 }
 
 .page-link:hover {
-	color: #111111 !important;
-	background: none !important;
+    color: #111111 !important;
+    background: none !important;
 }
 
 .section-name {
-	font-weight: bold;
-	margin-bottom: 10px;
-	font-size: 16px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    font-size: 16px;
 }
 
 @media only screen and (max-width: 700px) {
-	.page-link {
-		font-size: 13px !important;
-	}
+    .page-link {
+        font-size: 13px !important;
+    }
 
-	.section-name {
-		font-size: 14px;
-	}
+    .section-name {
+        font-size: 14px;
+    }
 }
 
 .icon-box {
-    background-color: #EBEBEB;
+    background-color: #ebebeb;
     width: 40px;
     height: 40px;
     position: relative;
