--- a/src/static/PageDashboard.css
+++ b/src/static/PageDashboard.css
@@ -1,8 +1,8 @@
 .dashboard-container {
-	background-color: #F6F6F6;
-	min-height: 100vh;
-	overflow-x: hidden !important;
-	justify-content: center;
+    background-color: #f6f6f6;
+    min-height: 100vh;
+    overflow-x: hidden !important;
+    justify-content: center;
 }
 
 .dashboard-flex {
@@ -23,8 +23,8 @@
 }
 
 .right-section {
-	padding: 40px 25px 0px 50px;
-	width: calc(100% - 400px);
+    padding: 40px 25px 0px 50px;
+    width: calc(100% - 400px);
 }
 
 .right-section .date {
@@ -33,24 +33,24 @@
 }
 
 .right-section .title {
-	font-size: 42px;
-	font-weight: bold;
+    font-size: 42px;
+    font-weight: bold;
 }
 
 @media only screen and (max-width: 700px) {
-	.right-section {
-		padding-left: 40px;
-		padding-right: 40px;
-		width: 100%;	
-	}
+    .right-section {
+        padding-left: 40px;
+        padding-right: 40px;
+        width: 100%;
+    }
 
-	.right-section .date {
-		margin-top: 50px;
-	}
+    .right-section .date {
+        margin-top: 50px;
+    }
 
-	.right-section .title {
-		font-size: 35px;
-	}
+    .right-section .title {
+        font-size: 35px;
+    }
 }
 
 .disk-status-box {
@@ -79,9 +79,9 @@
 }
 
 .image-box .icon {
-	color: #333333;
-	margin-top: 25;
-	height: 25;
+    color: #333333;
+    margin-top: 25;
+    height: 25;
 }
 
 .image-box .text {
@@ -109,9 +109,8 @@
     }
 }
 
-
 .payment-box {
-    background: #0B172B;
+    background: #0b172b;
     border-radius: 10px;
     text-align: center;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
@@ -123,24 +122,24 @@
 }
 
 .payment-box .icon {
-	color: white;
-	margin-top: 15;
-	height: 25;
+    color: white;
+    margin-top: 15;
+    height: 25;
 }
 
 .payment-box .text {
-	color: white;
-	font-size: 22px;
-	margin-top: 20px;
-	font-weight: bold;
+    color: white;
+    font-size: 22px;
+    margin-top: 20px;
+    font-weight: bold;
 }
 
 .payment-box .subtext {
-	font-size: 15px;
-	max-width: 400px;
-	margin: auto;
-	margin-top: 15px;
-    color: #D6D6D6;
+    font-size: 15px;
+    max-width: 400px;
+    margin: auto;
+    margin-top: 15px;
+    color: #d6d6d6;
     line-height: 1.6;
 }
 
@@ -171,7 +170,7 @@
     margin: auto;
     width: 100%;
     margin-bottom: 20px;
-    background: #0B172B;
+    background: #0b172b;
 }
 
 .payment-box .title {
@@ -189,11 +188,11 @@
 }
 
 .payment-box .text {
-    font-size: 15px;    
+    font-size: 15px;
     max-width: 400px;
     margin: auto;
     margin-top: 15px;
-    color: #D6D6D6;
+    color: #d6d6d6;
     font-weight: normal;
 }
 
@@ -209,7 +208,7 @@
 
 .download-box {
     font-size: 14px;
-    background: #0B172B;
+    background: #0b172b;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
     padding: 40px 15px;
@@ -228,7 +227,7 @@
     padding: 5px 5px !important;
 }
 
-.download-box .icon {   
+.download-box .icon {
     font-size: 16px;
     position: relative;
     bottom: 1px;
@@ -260,7 +259,7 @@
     display: inline;
     padding: 10px;
     border: none;
-    color: #E34D4D;
+    color: #e34d4d;
     background-color: rgba(227, 77, 77, 0.05);
     outline: none !important;
 }
@@ -281,14 +280,14 @@
     font-size: 12px;
     bottom: 1px;
     padding-right: 5px;
-    color: #DDDDDD;
+    color: #dddddd;
 }
 
 .gray-line {
     float: right;
     display: inline;
     margin-left: 0px;
-    background: #EBEBEB;
+    background: #ebebeb;
     width: 100px;
     height: 6px;
     border-radius: 3px;
