--- a/src/static/PageLanding.css
+++ b/src/static/PageLanding.css
@@ -1,21 +1,21 @@
 .title-text {
-	color: #111111;
-	font-weight: bold;
-	margin-top: 40px;
+    color: #111111;
+    font-weight: bold;
+    margin-top: 40px;
 }
 
 .title-subtext {
-	text-align: left;
-	margin-top: 25px;
-	color: #111111;
-	margin-bottom: 40px;
-	max-width: 650px;
-	font-size: calc(14px + 0.4vw);
+    text-align: left;
+    margin-top: 25px;
+    color: #111111;
+    margin-bottom: 40px;
+    max-width: 650px;
+    font-size: calc(14px + 0.4vw);
 }
 
 .black-button {
     font-size: calc(12px + 0.4vw) !important;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.10) !important;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1) !important;
     display: inline !important;
     background-color: #111111 !important;
     padding: 15px 30px !important;
@@ -36,7 +36,7 @@
 .cloud-pc-graphic .header {
     width: 100%;
     height: 50px;
-    background-color: #1F2635;
+    background-color: #1f2635;
     border-radius: 5px 5px 0px 0px;
     color: white;
     padding: 13px 35px;
@@ -50,19 +50,18 @@
 }
 
 @media only screen and (max-width: 700px) {
-	.cloud-pc-graphic .header {
-		padding: 13px 24px;
-	}
-	.cloud-pc-graphic .content {
-		padding: 25px;
-	}
+    .cloud-pc-graphic .header {
+        padding: 13px 24px;
+    }
+    .cloud-pc-graphic .content {
+        padding: 25px;
+    }
 }
 
 .cloud-pc-graphic .button {
     width: 100% !important;
     color: #0980b0 !important;
-    background:
-        rgba(94, 195, 235, 0.2) !important;
+    background: rgba(94, 195, 235, 0.2) !important;
     border: none !important;
     font-weight: bold !important;
     padding: 12px !important;
@@ -73,7 +72,7 @@
 .gradient-background {
     width: 100vw;
     min-height: 390px;
-    background-image: linear-gradient(121.2deg, #D7F5F5 2.24%, #F2DEF8 100%);
+    background-image: linear-gradient(121.2deg, #d7f5f5 2.24%, #f2def8 100%);
 }
 
 .gradient-background .section {
@@ -88,7 +87,7 @@
 
 .gradient-background .subtext {
     color: white;
-    background: rgba(0,0,0,0.9);
+    background: rgba(0, 0, 0, 0.9);
     border-radius: 15px;
     height: 30px;
     font-size: 14px;
@@ -110,12 +109,12 @@
     border-radius: 5px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
     text-align: left;
-    background-image: linear-gradient(121.2deg, #F2DEF8 2.24%, #D7F5F5 100%);
+    background-image: linear-gradient(121.2deg, #f2def8 2.24%, #d7f5f5 100%);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     padding: 30px;
-    min-height: 270px;
+    min-height: 280px;
     width: 100%;
     margin-bottom: 30px;
 }
@@ -135,11 +134,11 @@
 }
 
 @media only screen and (max-width: 700px) {
-	.gradient-box {
-		min-height: 210px;
-	}
+    .gradient-box {
+        min-height: 210px;
+    }
 
-	.gradient-box .text {
-		font-size: 14px;
-	}
+    .gradient-box .text {
+        font-size: 14px;
+    }
 }
