--- a/src/static/NewPageDashboard.css
+++ b/src/static/NewPageDashboard.css
@@ -65,10 +65,11 @@
 }
 
 .create-text {
-    padding: 20px;
+    padding: 24px;
     border-radius: 10px;
     background-color: #eee;
     margin-bottom: 24px;
+    font-size: 14px;
 }
 
 .image-box {
@@ -215,7 +216,7 @@
 
 .download-box {
     font-size: 14px;
-    background: #0b172b;
+    background: #fff;
     box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
     border-radius: 7px;
     padding: 40px 15px;
@@ -225,7 +226,6 @@
 
 .download-button {
     background: rgba(94, 195, 235, 0.1) !important;
-    border: solid 0.5px rgb(94, 195, 235) !important;
     font-size: 12px !important;
     border-radius: 2px !important;
     color: rgb(94, 195, 235) !important;
@@ -239,7 +239,7 @@
     position: relative;
     bottom: 1px;
     padding-right: 5px;
-    color: white;
+    color: #ddd;
 }
 
 .cancel-button {
