--- a/src/static/PageDashboard.css
+++ b/src/static/PageDashboard.css
@@ -80,7 +80,7 @@
     background-repeat: no-repeat;
     background-position: center;
     padding: 50px;
-    min-height: 260px;
+    height: 360px;
     margin: auto;
     width: 100%;
     margin-bottom: 20px;
@@ -95,12 +95,12 @@
 .image-box .title {
     color: #fff;
     text-align: left;
-    margin-bottom: 1em;
+    margin-bottom: 0.5em;
 }
 
 .image-box .text {
     color: #fff;
-    font-size: 26px;
+    font-size: 24px;
     margin-top: 30px;
     font-weight: bold;
 }
