--- a/src/static/PageDashboard.css
+++ b/src/static/PageDashboard.css
@@ -8,6 +8,8 @@
 .dashboard-flex {
     display: flex;
     overflow-x: hidden;
+    position: relative;
+    bottom: 60px;
 }
 
 .credits-box {
@@ -35,7 +37,7 @@
     font-weight: bold;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 700px) {
     .right-section {
         padding-left: 40px;
         padding-right: 40px;
