--- a/src/static/PageLanding.css
+++ b/src/static/PageLanding.css
@@ -130,3 +130,11 @@
         font-size: 14px;
     }
 }
+
+.pricing-description {
+    color: #555555;
+    display: block;
+    position: relative;
+    bottom: 5px;
+    margin-bottom: 5px;
+}
